--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,10 +14,37 @@
   position: absolute;
   z-index: 2;
   display: block;
-    width: 24.375rem;
-    height: 2.375rem;
-    line-height: 1.875rem;
+  width: 24.375rem;
+  height: 2.375rem;
+  line-height: 1.875rem;
   text-align: center;
   pointer-events: none;
   color: #aaa;
+}
+.modal-dialog {
+    max-width: 1000px!important;
+}
+.has-percent .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: calc(100% - 2.375rem);
+    height: 2.375rem;
+    line-height: 1.875rem;
+    text-align: right;
+    pointer-events: none;
+    color: #aaa;
+}
+ .has-percent .form-control {
+  padding-right: 1.375rem;
+}
+.bills > fieldset {
+    border: 1px solid rgba(0,0,0,0.25);
+    padding: 0 15px;
+}
+.bills legend {
+    font-size: inherit;
+    width: auto;
+    margin-left: 10px;
+    padding: 0 5px;
 }
